# fast-louvain

./: Cargo.toml
modules/application/: Cargo.toml
modules/cli/: Cargo.toml
