[package]
name = "louvain-cli"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# Workspace dependencies
louvain-application = { path = "../application" }
louvain-domain = { path = "../domain" }

# External dependencies
clap = { version = "4.0", features = ["derive"] }
bytecount = "0.6.3"
serde_json = "1.0"
